--- a/FriendOrganizer.UI/MainWindow.xaml
+++ b/FriendOrganizer.UI/MainWindow.xaml
@@ -5,8 +5,42 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FriendOrganizer"
         mc:Ignorable="d"
-        Title="FriendOranizer" Height="350" Width="525">
+        Title="FriendOranizer" Height="350" Width="525" FontSize="20">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <ListView ItemsSource="{Binding Friends}"
+                  SelectedItem="{Binding SelectedFriend,Mode=TwoWay}"
+                  DisplayMemberPath="FirstName"></ListView>
+
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            
+            <Label Content="FirstaName" Margin="10 10 10 0">
+            </Label>
+            <TextBox Grid.Row="1" Text="{Binding SelectedFriend.FirstName, 
+                    Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Margin="10 0 10 10"></TextBox>
+            
+            <Label Grid.Row="2" Content="LastName" Margin="10 0">
+            </Label>
+            <TextBox Grid.Row="3" Text="{Binding SelectedFriend.LastName, 
+                    Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Margin="10 0 10 10"></TextBox>
+           
+            <Label Grid.Row="4" Content="Email" Margin="10 0">
+            </Label>
+            <TextBox Grid.Row="5" Text="{Binding SelectedFriend.Email, 
+                    Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Margin="10 0 10 10"></TextBox>
+
+        </Grid>
     </Grid>
 </Window>
