--- a/FriendOrganizer.UI/App.xaml
+++ b/FriendOrganizer.UI/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="FriendOrganizer.App"
+﻿<Application x:Class="FriendOrganizer.UI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:FriendOrganizer"
