--- a/FriendOrganizer.UI/MainWindow.xaml
+++ b/FriendOrganizer.UI/MainWindow.xaml
@@ -1,46 +1,18 @@
-﻿<Window x:Class="FriendOrganizer.MainWindow"
+﻿<Window x:Class="FriendOrganizer.UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FriendOrganizer"
+        xmlns:local="clr-namespace:FriendOrganizer.UI"
+        xmlns:view="clr-namespace:FriendOrganizer.UI.View"
         mc:Ignorable="d"
-        Title="FriendOranizer" Height="350" Width="525" FontSize="20">
+        Title="FriendOrganizer" Height="350" Width="525" FontSize="20">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200"></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <ListView ItemsSource="{Binding Friends}"
-                  SelectedItem="{Binding SelectedFriend,Mode=TwoWay}"
-                  DisplayMemberPath="FirstName"></ListView>
-
-        <Grid Grid.Column="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition></RowDefinition>
-            </Grid.RowDefinitions>
-            
-            <Label Content="FirstaName" Margin="10 10 10 0">
-            </Label>
-            <TextBox Grid.Row="1" Text="{Binding SelectedFriend.FirstName, 
-                    Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Margin="10 0 10 10"></TextBox>
-            
-            <Label Grid.Row="2" Content="LastName" Margin="10 0">
-            </Label>
-            <TextBox Grid.Row="3" Text="{Binding SelectedFriend.LastName, 
-                    Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Margin="10 0 10 10"></TextBox>
-           
-            <Label Grid.Row="4" Content="Email" Margin="10 0">
-            </Label>
-            <TextBox Grid.Row="5" Text="{Binding SelectedFriend.Email, 
-                    Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Margin="10 0 10 10"></TextBox>
-
-        </Grid>
+        <view:NavigationView DataContext="{Binding NavigationViewModel}"/>
+        <view:FriendDetailView Grid.Column="1" DataContext="{Binding FriendDetailViewModel}"/>
     </Grid>
 </Window>
