--- a/FriendOrganizer.UI/MainWindow.xaml
+++ b/FriendOrganizer.UI/MainWindow.xaml
@@ -7,7 +7,9 @@
         xmlns:view="clr-namespace:FriendOrganizer.UI.View"
         xmlns:viewModel="clr-namespace:FriendOrganizer.UI.ViewModel"
         mc:Ignorable="d"
-        Title="FriendOrganizer" Height="350" Width="525" FontSize="20">
+        Title="FriendOrganizer" Height="700" Width="1000"
+        WindowStartupLocation="CenterScreen"
+        FontSize="20">
     <Window.Resources>
         <DataTemplate DataType="{x:Type viewModel:FriendDetailViewModel}">
             <view:FriendDetailView/>
@@ -27,7 +29,7 @@
                 <MenuItem Header="New Friend" Command="{Binding CreateNewFriendCommand}"/>
             </MenuItem>
         </Menu>
-        <view:NavigationView Grid.Row="1" Grid.Column="0"
+        <view:NavigationView Grid.Row="1"
                              DataContext="{Binding NavigationViewModel}"/>
         <ContentControl Grid.Row="1"
                         Grid.Column="1"
