--- a/FriendOrganizer.UI/MainWindow.xaml
+++ b/FriendOrganizer.UI/MainWindow.xaml
@@ -30,15 +30,28 @@
         <Menu Grid.ColumnSpan="2" FontSize="20">
             <MenuItem Header="Create">
                 <MenuItem Header="New Friend" Command="{Binding CreateNewDetailCommand}"
-                          CommandParameter="{x:Type viewModel:FriendDetailViewModel}"/>
+                  CommandParameter="{x:Type viewModel:FriendDetailViewModel}"/>
                 <MenuItem Header="New Meeting" Command="{Binding CreateNewDetailCommand}"
-                          CommandParameter="{x:Type viewModel:MeetingDetailViewModel}"/>
+                  CommandParameter="{x:Type viewModel:MeetingDetailViewModel}"/>
             </MenuItem>
         </Menu>
         <view:NavigationView Grid.Row="1"
-                             DataContext="{Binding NavigationViewModel}"/>
-        <ContentControl Grid.Row="1"
-                        Grid.Column="1"
-                        Content="{Binding DetailViewModel}"/>
+                         DataContext="{Binding NavigationViewModel}"/>
+        <TabControl Grid.Row="1" Grid.Column="1" 
+                ItemsSource="{Binding DetailViewModels}"
+                SelectedItem="{Binding SelectedDetailViewModel,Mode=TwoWay}">
+            <TabControl.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Title}"/>
+                        <TextBlock Text="*" Visibility="{Binding HasChanges,
+              Converter={StaticResource booleanToVisibilityConverter}}"/>
+                        <Button Command="{Binding CloseDetailViewCommand}" 
+                    VerticalContentAlignment="Top" Margin="2"
+                    Content="x" FontSize="20"/>
+                    </StackPanel>
+                </DataTemplate>
+            </TabControl.ItemTemplate>
+        </TabControl>
     </Grid>
 </Window>
