--- a/FriendOrganizer.UI/MainWindow.xaml
+++ b/FriendOrganizer.UI/MainWindow.xaml
@@ -1,8 +1,9 @@
-﻿<Window x:Class="FriendOrganizer.UI.MainWindow"
+﻿<Controls:MetroWindow x:Class="FriendOrganizer.UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:local="clr-namespace:FriendOrganizer.UI"
         xmlns:view="clr-namespace:FriendOrganizer.UI.View"
         xmlns:viewModel="clr-namespace:FriendOrganizer.UI.ViewModel"
@@ -20,46 +21,55 @@
         <DataTemplate DataType="{x:Type viewModel:ProgrammingLanguageDetailViewModel}">
             <view:ProgrammingLanguageDetailView/>
         </DataTemplate>
-        </Window.Resources>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="200"/>
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
-            <Menu Grid.ColumnSpan="2" FontSize="20">
-                <MenuItem Header="Create">
-                    <MenuItem Header="New Friend" Command="{Binding CreateNewDetailCommand}"
+    </Window.Resources>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Menu Grid.ColumnSpan="2" FontSize="20">
+            <MenuItem Header="Create">
+                <MenuItem Header="New Friend" Command="{Binding CreateNewDetailCommand}"
                   CommandParameter="{x:Type viewModel:FriendDetailViewModel}"/>
-                    <MenuItem Header="New Meeting" Command="{Binding CreateNewDetailCommand}"
+                <MenuItem Header="New Meeting" Command="{Binding CreateNewDetailCommand}"
                   CommandParameter="{x:Type viewModel:MeetingDetailViewModel}"/>
-                </MenuItem>
-                <MenuItem Header="Edit">
-                    <MenuItem Header="Programming Languages"
+            </MenuItem>
+            <MenuItem Header="Edit">
+                <MenuItem Header="Programming Languages"
                   Command="{Binding OpenSingleDetailViewCommand}"
                   CommandParameter="{x:Type viewModel:ProgrammingLanguageDetailViewModel}"/>
-                </MenuItem>
-            </Menu>
-            <view:NavigationView Grid.Row="1"
+            </MenuItem>
+        </Menu>
+        <view:NavigationView Grid.Row="1"
                          DataContext="{Binding NavigationViewModel}"/>
-            <TabControl Grid.Row="1" Grid.Column="1" 
+        <TabControl Grid.Row="1" Grid.Column="1" 
                 ItemsSource="{Binding DetailViewModels}"
                 SelectedItem="{Binding SelectedDetailViewModel,Mode=TwoWay}">
-                <TabControl.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="{Binding Title}"/>
-                            <TextBlock Text="*" Visibility="{Binding HasChanges,
+            <TabControl.ItemContainerStyle>
+                <Style TargetType="TabItem"
+               BasedOn="{StaticResource {x:Type TabItem}}">
+                    <Setter Property="Background" Value="#333333"/>
+                    <Setter Property="BorderBrush" Value="Transparent"/>
+                    <Setter Property="BorderThickness" Value="2"/>
+                </Style>
+            </TabControl.ItemContainerStyle>
+            <TabControl.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Title}"/>
+                        <TextBlock Text="*" Visibility="{Binding HasChanges,
               Converter={StaticResource booleanToVisibilityConverter}}"/>
-                            <Button Command="{Binding CloseDetailViewCommand}" 
-                    VerticalContentAlignment="Top" Margin="2"
-                    Content="x" FontSize="20"/>
-                        </StackPanel>
-                    </DataTemplate>
-                </TabControl.ItemTemplate>
-            </TabControl>
-        </Grid>
-</Window>
+                        <Button Command="{Binding CloseDetailViewCommand}" 
+                    Style="{StaticResource ChromelessButtonStyle}"
+                    VerticalContentAlignment="Top" Margin="2 0 2 2"
+                    Content="X" FontSize="20"/>
+                    </StackPanel>
+                </DataTemplate>
+            </TabControl.ItemTemplate>
+        </TabControl>
+    </Grid>
+</Controls:MetroWindow>
