--- a/FriendOrganizer.UI/View/NavigationView.xaml
+++ b/FriendOrganizer.UI/View/NavigationView.xaml
@@ -6,54 +6,57 @@
              xmlns:local="clr-namespace:FriendOrganizer.UI.View"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-  <UserControl.Resources>
-    <Style x:Key="NaviItemContainerStyle" TargetType="ContentPresenter">
-      <Setter Property="HorizontalAlignment" Value="Left"/>
-      <Setter Property="Margin" Value="2"/>
-    </Style>
-    <DataTemplate x:Key="NaviItemTemplate">
-      <Button Content="{Binding DisplayMember}"
-                    Command="{Binding OpenDetailViewCommand}">
-        <Button.Template>
-          <ControlTemplate TargetType="Button">
-            <Grid x:Name="grid">
-              <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+    <UserControl.Resources>
+        <Style x:Key="NaviItemContainerStyle" TargetType="ContentPresenter">
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="Margin" Value="2"/>
+        </Style>
+        <DataTemplate x:Key="NaviItemTemplate">
+            <Button Content="{Binding DisplayMember}"
+              Command="{Binding OpenDetailViewCommand}"
+              FontSize="16">
+                <Button.Template>
+                    <ControlTemplate TargetType="Button">
+                        <Grid x:Name="grid">
+                            <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                                       VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
-            </Grid>
-            <ControlTemplate.Triggers>
-              <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Cursor" Value="Hand"/>
-                <Setter Property="FontWeight" Value="Bold"/>
-              </Trigger>
-              <Trigger Property="IsPressed" Value="True">
-                <Setter Property="FontWeight" Value="Normal"/>
-              </Trigger>
-            </ControlTemplate.Triggers>
-          </ControlTemplate>
-        </Button.Template>
-      </Button>
-    </DataTemplate>
-  </UserControl.Resources>
-  <Grid>
-    <Grid.RowDefinitions>
-      <RowDefinition Height="300"/>
-      <RowDefinition/>
-    </Grid.RowDefinitions>
-    <GroupBox Header="Friends">
-      <ScrollViewer VerticalScrollBarVisibility="Auto"
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Cursor" Value="Hand"/>
+                                <Setter Property="FontWeight" Value="Bold"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter Property="FontWeight" Value="Normal"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Button.Template>
+            </Button>
+        </DataTemplate>
+    </UserControl.Resources>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="300"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <GroupBox Header="Friends">
+            <ScrollViewer VerticalScrollBarVisibility="Auto"
                   HorizontalScrollBarVisibility="Auto">
-        <ItemsControl ItemsSource="{Binding Friends}"
+                <ItemsControl ItemsSource="{Binding Friends}"
                     ItemContainerStyle="{StaticResource NaviItemContainerStyle}"
-                    ItemTemplate="{StaticResource NaviItemTemplate}"/>
-      </ScrollViewer>
-    </GroupBox>
-    <GroupBox Header="Meetings" Grid.Row="1">
-      <ScrollViewer VerticalScrollBarVisibility="Auto"
+                    ItemTemplate="{StaticResource NaviItemTemplate}"
+                      Margin="10"/>
+            </ScrollViewer>
+        </GroupBox>
+        <GroupBox Header="Meetings" Grid.Row="1">
+            <ScrollViewer VerticalScrollBarVisibility="Auto"
                   HorizontalScrollBarVisibility="Auto">
-        <ItemsControl ItemsSource="{Binding Meetings}"
+                <ItemsControl ItemsSource="{Binding Meetings}"
                     ItemContainerStyle="{StaticResource NaviItemContainerStyle}"
-                    ItemTemplate="{StaticResource NaviItemTemplate}"/>
-      </ScrollViewer>
-    </GroupBox>
-  </Grid>
+                    ItemTemplate="{StaticResource NaviItemTemplate}"
+                      Margin="10"/>
+            </ScrollViewer>
+        </GroupBox>
+    </Grid>
 </UserControl>
